<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Hindi marks" />

        <EditText
            android:id="@+id/student_detail_edit_hindimarks_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:text="15" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="English marks" />

        <EditText
            android:id="@+id/student_detail_edit_englishmarks_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:text="15"

            />

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp"

        >

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/student_detail_edit_delete_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/delete" />

        <android.support.v7.widget.CardView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"

            >

        </android.support.v7.widget.CardView>


        <Button
            android:id="@+id/student_detail_edit_done_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/done"

            />

        <android.support.v7.widget.CardView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            app:cardBackgroundColor="@color/colorPrimary"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"


            >

        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/student_detail_edit_cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00000000"
            android:text="@string/cancel"

            />


    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="0dp">

    </android.support.v7.widget.CardView>

</LinearLayout>

